--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ bevy = "0.14.0"
 bevy_egui = "0.28.0"
 bevy_pixel_buffer = { version = "0.8.0", features = ["egui"] }
 bitfield = "0.15.0"
+clap = { version = "4.5.11", features = ["derive"] }
 rand = "0.8.5"
 thiserror = "1.0.63"
 
