--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,19 +6,23 @@ edition = "2021"
 [dependencies]
 bevy = "0.14.0"
 bevy_egui = "0.28.0"
+bevy_fundsp = { git = "https://github.com/niconicoj/bevy_fundsp.git" }
 bevy_pixel_buffer = { version = "0.8.0", features = ["egui"] }
 bitfield = "0.15.0"
 clap = { version = "4.5.11", features = ["derive"] }
 rand = "0.8.5"
 thiserror = "1.0.63"
+uuid = { version = "1.10.0", features = ["v5"] }
 
 # Enable a small amount of optimization in the dev profile.
 [profile.dev]
 opt-level = 1
+overflow-checks = false 
 
 # Enable a large amount of optimization in the dev profile for dependencies.
 [profile.dev.package."*"]
 opt-level = 3
+overflow-checks = false 
 
 [dev-dependencies]
 mockall = { version = "0.12.1", features = ["nightly"] }
